--- a/connector_elasticsearch/tests/cassettes/TestConnectorElasticsearch.test_index_adapter.yaml
+++ b/connector_elasticsearch/tests/cassettes/TestConnectorElasticsearch.test_index_adapter.yaml
@@ -2,70 +2,57 @@ interactions:
 - request:
     body: null
     headers:
-      connection:
-      - keep-alive
-      content-type:
-      - application/json
+      connection: [keep-alive]
+      content-type: [application/json]
     method: HEAD
-    uri: http://127.0.0.1:9200/
+    uri: http://elastic:9200/
   response:
-    body:
-      string: ''
+    body: {string: !!python/unicode ''}
     headers:
-      content-length:
-      - '493'
-      content-type:
-      - application/json; charset=UTF-8
-    status:
-      code: 200
-      message: OK
+      content-length: ['508']
+      content-type: [application/json; charset=UTF-8]
+    status: {code: 200, message: OK}
 - request:
     body: null
     headers:
-      connection:
-      - keep-alive
-      content-type:
-      - application/json
+      connection: [keep-alive]
+      content-type: [application/json]
     method: HEAD
-    uri: http://127.0.0.1:9200/demo_elasticsearch_backend_res_partner_binding_fake_en_us
+    uri: http://elastic:9200/demo_elasticsearch_backend_res_partner_binding_fake_en_us
   response:
-    body:
-      string: ''
+    body: {string: !!python/unicode ''}
     headers:
-      Warning:
-      - 299 Elasticsearch-6.7.0-8453f77 "[types removal] The parameter include_type_name
-        should be explicitly specified in get indices requests to prepare for 7.0.
-        In 7.0 include_type_name will default to 'false', which means responses will
-        omit the type name in mapping definitions."
-      content-length:
-      - '446'
-      content-type:
-      - application/json; charset=UTF-8
-    status:
-      code: 200
-      message: OK
+      content-length: ['671']
+      content-type: [application/json; charset=UTF-8]
+    status: {code: 404, message: Not Found}
 - request:
-    body: '{"index":{"_index":"demo_elasticsearch_backend_res_partner_binding_fake_en_us","_type":"odoo_doc","_id":"foo"}}
+    body: !!python/unicode '{"mappings":{}}'
+    headers:
+      connection: [keep-alive]
+      content-type: [application/json]
+    method: PUT
+    uri: http://elastic:9200/demo_elasticsearch_backend_res_partner_binding_fake_en_us
+  response:
+    body: {string: !!python/unicode '{"acknowledged":true,"shards_acknowledged":true,"index":"demo_elasticsearch_backend_res_partner_binding_fake_en_us"}'}
+    headers:
+      content-length: ['116']
+      content-type: [application/json; charset=UTF-8]
+    status: {code: 200, message: OK}
+- request:
+    body: !!python/unicode '{"index":{"_id":"foo","_index":"demo_elasticsearch_backend_res_partner_binding_fake_en_us"}}
 
       {"objectID":"foo"}
 
       '
     headers:
-      connection:
-      - keep-alive
-      content-type:
-      - application/x-ndjson
+      connection: [keep-alive]
+      content-type: [!!python/unicode 'application/x-ndjson']
     method: POST
-    uri: http://127.0.0.1:9200/_bulk
+    uri: http://elastic:9200/_bulk
   response:
-    body:
-      string: '{"took":4,"errors":false,"items":[{"index":{"_index":"demo_elasticsearch_backend_res_partner_binding_fake_en_us","_type":"odoo_doc","_id":"foo","_version":2,"result":"updated","_shards":{"total":2,"successful":1,"failed":0},"_seq_no":1,"_primary_term":1,"status":200}}]}'
+    body: {string: !!python/unicode '{"took":50,"errors":false,"items":[{"index":{"_index":"demo_elasticsearch_backend_res_partner_binding_fake_en_us","_type":"_doc","_id":"foo","_version":1,"result":"created","_shards":{"total":2,"successful":1,"failed":0},"_seq_no":0,"_primary_term":1,"status":201}}]}'}
     headers:
-      content-length:
-      - '270'
-      content-type:
-      - application/json; charset=UTF-8
-    status:
-      code: 200
-      message: OK
+      content-length: ['267']
+      content-type: [application/json; charset=UTF-8]
+    status: {code: 200, message: OK}
 version: 1
