--- a/connector_elasticsearch/tests/cassettes/TestConnectorElasticsearch.test_index_adapter_no_objectID.yaml
+++ b/connector_elasticsearch/tests/cassettes/TestConnectorElasticsearch.test_index_adapter_no_objectID.yaml
@@ -2,46 +2,27 @@ interactions:
 - request:
     body: null
     headers:
-      connection:
-      - keep-alive
-      content-type:
-      - application/json
+      connection: [keep-alive]
+      content-type: [application/json]
     method: HEAD
-    uri: http://127.0.0.1:9200/
+    uri: http://elastic:9200/
   response:
-    body:
-      string: ''
+    body: {string: !!python/unicode ''}
     headers:
-      content-length:
-      - '493'
-      content-type:
-      - application/json; charset=UTF-8
-    status:
-      code: 200
-      message: OK
+      content-length: ['508']
+      content-type: [application/json; charset=UTF-8]
+    status: {code: 200, message: OK}
 - request:
     body: null
     headers:
-      connection:
-      - keep-alive
-      content-type:
-      - application/json
+      connection: [keep-alive]
+      content-type: [application/json]
     method: HEAD
-    uri: http://127.0.0.1:9200/demo_elasticsearch_backend_res_partner_binding_fake_en_us
+    uri: http://elastic:9200/demo_elasticsearch_backend_res_partner_binding_fake_en_us
   response:
-    body:
-      string: ''
+    body: {string: !!python/unicode ''}
     headers:
-      Warning:
-      - 299 Elasticsearch-6.7.0-8453f77 "[types removal] The parameter include_type_name
-        should be explicitly specified in get indices requests to prepare for 7.0.
-        In 7.0 include_type_name will default to 'false', which means responses will
-        omit the type name in mapping definitions."
-      content-length:
-      - '446'
-      content-type:
-      - application/json; charset=UTF-8
-    status:
-      code: 200
-      message: OK
+      content-length: ['433']
+      content-type: [application/json; charset=UTF-8]
+    status: {code: 200, message: OK}
 version: 1
